# cppTask

./: CMakeLists.txt  README.md
include/: Facade.h  Priority.h  ScreenElements.h  Task.h  TaskManager.h
include/tui/: MainDialog.h  UserPrompts.h
src/: Facade.cpp  Priority.cpp  Task.cpp  TaskManager.cpp  main.cpp
src/tui/: MainDialog.cpp  ScreenElements.cpp  UserPrompts.cpp
tests/: CMakeLists.txt  FacadeTests.cpp
